--- a/src/app/components/store/checkout/checkout.component.html
+++ b/src/app/components/store/checkout/checkout.component.html
@@ -97,7 +97,7 @@
                                 </div>
                             </ng-template>
                             <ng-template ngbPanelContent>
-                                <!-- <div class="content-card steps-inner promo-checkout">
+                                <div class="content-card steps-inner promo-checkout">
                                     <div class="col-md-12 p-0 mb-3">
                                         <div class="promo-code">
                                             <div [className]="promocode_onetime ?  'special-field datafilled form-group' : 'special-field dataempty form-group'">
@@ -105,7 +105,7 @@
                                                     name="promo-enter" class="form-control" />
                                                 <label class="form-label">Promo Code</label>
                                                 <span class="vali-promo">Not Applied</span>
-                                                <button class="btn-add-promo" [disabled]="isDisabled"
+                                                <span class="btn-add-promo" [disabled]="isDisabled"
                                                 (click)="addPromo(); isDisabled = true;">
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
                                                         viewBox="0 0 14 14">
@@ -114,12 +114,12 @@
                                                             d="M207.9,11h-5v5a1,1,0,0,1-2,0V11h-5a1,1,0,0,1,0-2h5V4a1,1,0,0,1,2,0V9h5a1,1,0,0,1,0,2Z"
                                                             transform="translate(-194.9 -3)"></path>
                                                     </svg>
-                                                </button>
+                                                </span>
                                             </div>
                                         </div>
                                     </div>
-                                </div> -->
-                                <div class="other-additional-product" >
+                                </div>
+                                <!-- <div class="other-additional-product" >
                                     <div class="promo-code" >
                                       <div
                                         [className]="
@@ -135,7 +135,7 @@
                                           (focusout)="clearPromo($event)"
                                         />
                                         <label class="form-label">Promo Code</label>
-                                        <button class="btn-add-promo"  (click)="addPromo(0)">
+                                        <button class="btn-add-promo"  (click)="addPromo()">
                                           <svg
                                             xmlns="http://www.w3.org/2000/svg"
                                             width="14"
@@ -152,7 +152,7 @@
                                         </button>
                                       </div>
                                     </div>
-                                  </div>
+                                  </div> -->
                             </ng-template>
                         </ngb-panel>
 
@@ -569,10 +569,11 @@
                                                             type="text"
                                                             [(ngModel)]="promocode_onetime"
                                                             class="form-control"
+                                                            (focusout)="clearPromo($event)"
                                                           />
                                                             <label class="form-label">Promo Code</label>
                                                             <span class="vali-promo">Not Applied</span>
-                                                            <span class="btn-add-promo">
+                                                            <span class="btn-add-promo" (click)="addPromo()">
                                                                 <svg xmlns="http://www.w3.org/2000/svg" width="14"
                                                                     height="14" viewBox="0 0 14 14">
                                                                     <path _ngcontent-shj-c146="" id="Path_2014"
@@ -978,15 +979,16 @@
                                                 <div class="content-card steps-inner promo-checkout">
                                                     <div class="col-md-12 p-0 mb-3">
                                                         <div
-                                                            [className]="promocodepay ?  'special-field datafilled form-group ' : 'special-field dataempty form-group'">
+                                                            [className]="promocode_onetime ?  'special-field datafilled form-group ' : 'special-field dataempty form-group'">
                                                             <input  
                                                             type="text"
                                                             [(ngModel)]="promocode_onetime"
                                                             class="form-control"
+                                                            (focusout)="clearPromo($event)"
                                                           />
                                                             <label class="form-label">Promo Code</label>
                                                             <span class="vali-promo">Not Applied</span>
-                                                            <span class="btn-add-promo">
+                                                            <span class="btn-add-promo" (click)="addPromo()">
                                                                 <svg xmlns="http://www.w3.org/2000/svg" width="14"
                                                                     height="14" viewBox="0 0 14 14">
                                                                     <path _ngcontent-shj-c146="" id="Path_2014"
