--- a/src/app/components/layout/app-header/app-header.component.html
+++ b/src/app/components/layout/app-header/app-header.component.html
@@ -49,7 +49,7 @@
         </div>
         <ul class="right-menu">
           <li>
-            <a (click)="showSearchbar()"><i class="fa fa-search"></i></a>
+            <a [routerLink]="['/store/search-products']"><i class="fa fa-search"></i></a>
           </li>
           <li class="cart-item"><a [routerLink]="['/store/cart']"><i class="fa fa-shopping-bag"></i><span
                 *ngIf="cartItems" class="cart-info">{{cartItems}}</span></a></li>
@@ -82,7 +82,7 @@
         </div>
       </div>
 
-      <div class="searchOptionsbox" *ngIf="isSearchshow">
+      <!-- <div class="searchOptionsbox" *ngIf="isSearchshow">
         <div class="close-ico">
           <a (click)="closeSearchbar()">
             <svg id="Icon_Close_Rounded" data-name="Icon / Close / Rounded" xmlns="http://www.w3.org/2000/svg" width="24"
@@ -101,7 +101,7 @@
             <i class="fa fa-search"></i>
           </button>
         </div>
-      </div>
+      </div> -->
     </div>
   </nav>
 </header>
