--- a/src/app/components/auth/sign-up/sign-up.component.html
+++ b/src/app/components/auth/sign-up/sign-up.component.html
@@ -29,10 +29,10 @@
               </div>
             </div>
             <div class="form-group mb-3">
-              <input type="text" class="form-control" (change)="emailVerify('UserName')" formControlName="username" placeholder="Username"
-                [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
-              <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-                <div *ngIf="f.username.errors.required">Username is required</div>
+              <input type="text" class="form-control" (change)="emailVerify('UserName')" formControlName="userName" placeholder="Username"
+                [ngClass]="{ 'is-invalid': submitted && f.userName.errors }" />
+              <div *ngIf="submitted && f.userName.errors" class="invalid-feedback">
+                <div *ngIf="f.userName.errors.required">User Name is required</div>
               </div>
             </div>
             <div class="form-group mb-3">
