--- a/src/app/components/store/checkout/checkout.component.html
+++ b/src/app/components/store/checkout/checkout.component.html
@@ -523,6 +523,9 @@
                                             </ng-template>
                                         </ngb-panel>
                                     </ngb-accordion>
+                                    <div class="saveprocessed">
+                                        <button type="submit">Save & Continue</button>
+                                    </div>
                                 </ng-template>
                             </ngb-panel>
                             <ngb-panel id="checkoutstep2">
@@ -921,10 +924,8 @@
                                             </ng-template>
                                         </ngb-panel>
                                     </ngb-accordion>
-                                    <div class="cta-continue">
-                                        <!-- <button class="btn btn-continue">
-                                        Save and continue
-                                    </button> -->
+                                    <div class="saveprocessed">
+                                        <button type="submit">Save & Continue</button>
                                     </div>
                                 </ng-template>
                             </ngb-panel>
