--- a/src/app/components/store/checkout/checkout.component.css
+++ b/src/app/components/store/checkout/checkout.component.css
@@ -425,9 +425,9 @@ ul.conv-products.mk-primary label.custom-control-label {
     background-color: #1cb1c5;
     border-radius: 40px;
     padding: 10px 10px;
-    font-family: 'g-regular';
+    font-family: 'g-demibold';
     color: #fff;
     text-transform: uppercase;
-    font-size: 18px;
+    font-size: 15px;
     border: 1px solid #1cb1c5;
 }
