--- a/src/app/components/layout/app-header/app-header.component.html
+++ b/src/app/components/layout/app-header/app-header.component.html
@@ -23,7 +23,7 @@
             <a class="nav-link" [routerLink]="['/store']" [routerLinkActive]="['active']">Shop</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/blog']" [routerLinkActive]="['active']">Blog</a>
+            <a class="nav-link"  href="https://blog.winknaturals.com/" [routerLinkActive]="['active']">Blog</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/about']" [routerLinkActive]="['active']">About</a>
@@ -64,7 +64,7 @@
             <a class="nav-link" [routerLink]="['/store']" [routerLinkActive]="['active']">Shop</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/blog']" [routerLinkActive]="['active']">Blog</a>
+            <a class="nav-link" href="https://blog.winknaturals.com/">Blog</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/about']" [routerLinkActive]="['active']">About</a>
