--- a/src/app/components/layout/app-footer/app-footer.component.html
+++ b/src/app/components/layout/app-footer/app-footer.component.html
@@ -8,7 +8,7 @@
                   <li><a [routerLink]="['']">Home</a></li>
                   <li><a [routerLink]="['/store']">Shop</a></li>
                   <li><a [routerLink]="['/about']">About</a></li>
-                  <li><a [routerLink]="['/blog']">Blog</a></li>
+                  <li><a href="https://blog.winknaturals.com/">Blog</a></li>
                   <li><a [routerLink]="['/enrollment']">Join</a></li>
                   <li *ngIf="!user"><a [routerLink]="['/sign-in']" class="log-links">Log In</a></li>
               </ul>
