--- a/src/app/components/store/shop/shop.component.css
+++ b/src/app/components/store/shop/shop.component.css
@@ -345,7 +345,44 @@ a.btn-add:hover {
   color: #1cb1c5 !important;
 }
 
+.header18 h3 {
+  text-align: center;
+  font-family: 'g-demibold';
+  font-size: 25px;
+  color: #000;
+}
 
+.model-proo {
+  padding: 25px 25px;
+}
+
+.content18plus .btn-same18 {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  margin: 25px 0 0 0;
+}
+
+.content18plus .btn-same18 button {
+  background-color: #000;
+  max-width: 114px;
+  display: block;
+  width: 100%;
+  font-family: 'g-demibold';
+  font-size: 18px;
+  color: #fff;
+  line-height: 20px;
+  padding: 9px 9px;
+}
+
+.content18plus .btn-same18 button.btn-yes {
+  background-color: #1cb1c5;
+  margin-left: 10px;
+}
+
+.prod-wrapp a:hover {
+  cursor: pointer;
+}
 
 /* MEDIA */
 @media (max-width:1366px)
