Route changes on the basis of product filter

--- a/src/app/components/store/cart/cart.component.html
+++ b/src/app/components/store/cart/cart.component.html
@@ -460,7 +460,7 @@
 
         <!--- Today's Order BOX -->
 
-        <div class="grid-box-shadow today-order">
+        <div  *ngIf="show" class="grid-box-shadow today-order">
           <h4>Today's Order</h4>
           <div class="order-summary-end">
             <ul>
