--- a/src/app/components/auth/sign-up/sign-up.component.html
+++ b/src/app/components/auth/sign-up/sign-up.component.html
@@ -62,7 +62,7 @@
               </div>
             </div>
             <div class="form-group mb-3">
-              <input type="text" placeholder="Date Of Birth" class="form-control"
+              <input type="text" placeholder="Date Of Birth" class="form-control" readonly="readonly"
               bsDatepicker [maxDate]="maxDate" [bsConfig]="{ isAnimated: true, adaptivePosition: true, selectFromOtherMonth: true  }" formControlName="dateOfBirth">
             </div>
           </div>
